# vdds

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
include/: vring.hpp
source/: CMakeLists.txt  vring.cpp
source/platform/win/: mman.cpp
